--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=demo_for_4
+spring.mvc.apiversion.required=true
+spring.mvc.apiversion.enabled=true
+spring.mvc.apiversion.use.path-segment=1
+spring.mvc.apiversion.supported= 1,2
